# Rust-project

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.ps1  setup_guide.md.resolved
.github/workflows/: ci.yml
docs/: api.md  architecture.md  er-diagram.md  testing.md
migrations/: 20250101000001_init.sql  20250101000002_seed.sql
src/: main.rs
src/api/: mod.rs
src/auth/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/domain/: mod.rs
src/dto/: mod.rs
src/handlers/: api_key.rs  audit.rs  auth.rs  health.rs  mod.rs  org.rs  role.rs
src/middleware/: client_info.rs  mod.rs  rate_limit.rs  request_id.rs
src/models/: mod.rs
src/permissions/: mod.rs
src/repositories/: api_key.rs  audit.rs  invitation.rs  mod.rs  organization.rs  role.rs  session.rs  user.rs  verification.rs
src/routes/: mod.rs
src/services/: api_key_service.rs  audit_service.rs  auth_service.rs  mod.rs  org_service.rs  role_service.rs
src/utils/: error.rs  mod.rs  password.rs  token.rs
tests/: auth_test.rs  health_test.rs  permission_test.rs
